# AA-YOLO

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  README.md  detect.py  pyproject.toml  test.py  train.py
.github/workflows/: ci.yml
cfg/training/: AA-yolov7-medium.yaml  AA-yolov7-small.yaml  AA-yolov7-tiny.yaml
data/: hyp.scratch.AA_yolo.yaml  irstd_1k_eflnet.yaml  sirst.yaml
data/datasets/: IRSTD_test_EFLNet.txt  IRSTD_train_EFLNet.txt  IRSTD_val_EFLNet.txt  test_yolo.txt  train_yolo.txt  val_yolo.txt
data/datasets/IRSTD-1k/labels/: XDU0.txt  XDU1.txt  XDU10.txt  XDU100.txt  XDU1000.txt  XDU101.txt  XDU102.txt  XDU103.txt  XDU104.txt  XDU105.txt  XDU106.txt  XDU107.txt  XDU108.txt  XDU109.txt  XDU11.txt  XDU110.txt  XDU111.txt  XDU112.txt  XDU113.txt  XDU114.txt  XDU115.txt  XDU116.txt  XDU117.txt  XDU118.txt  XDU119.txt  XDU12.txt  XDU120.txt  XDU121.txt  XDU122.txt  XDU123.txt  XDU124.txt  XDU125.txt  XDU126.txt  XDU127.txt  XDU128.txt  XDU129.txt  XDU13.txt  XDU130.txt  XDU131.txt  XDU132.txt  (+960 more)
data/datasets/SIRST/labels/: Misc_1.txt  Misc_10.txt  Misc_100.txt  Misc_101.txt  Misc_102.txt  Misc_103.txt  Misc_104.txt  Misc_105.txt  Misc_106.txt  Misc_107.txt  Misc_108.txt  Misc_109.txt  Misc_11.txt  (+410 more)
docs/: dashboard.html
models/: common.py  yolo.py
notebooks/: demo_inference.ipynb
scripts/: validate_gpu.py
tests/: test_anomaly_edge_cases.py  test_smoke.py  test_tier2_improvements.py
utils/: datasets.py  general.py  google_utils.py  loss.py  metrics.py  plots.py  torch_utils.py
